--- a/docs/site/homepage.njk
+++ b/docs/site/homepage.njk
@@ -115,11 +115,19 @@ layout: homepage-layout
             </p>
           </div></a>
 
-          <a class="tile-link" href="/data/building-housing-intelligence/">
+          <a class="tile-link" href="/data/data-driven-approach-detecting-cash-benefit-theft/">
           <div class="content-tile">
             <div class="content-tile-header header-paper"><span class="title-card-header-label">Papers</span></div>
-            <div class="content-tile-title">Building housing intelligence for California</div>
-            <p>ODI built a tool to more accurately track the housing development pipeline to build more housing faster
+            <div class="content-tile-title">A data-driven approach to detecting cash benefit theft</div>
+            <p>ODI built a predictive model to detect illegal debit card transactions
+            </p>
+          </div></a>
+
+          <a class="tile-link" href="/data/enabling-analysis-californias-hiring-recruitment-data/">
+          <div class="content-tile">
+            <div class="content-tile-header header-paper"><span class="title-card-header-label">Papers</span></div>
+            <div class="content-tile-title">Enabling analysis of California’s hiring and recruitment data</div>
+            <p>How ODI and CalHR increased analysis capabilities for the Examination & Certification Online System
             </p>
           </div></a>
 
