--- a/docs/site/_includes/featured-content.njk
+++ b/docs/site/_includes/featured-content.njk
@@ -15,7 +15,7 @@
             <a class="tile-link" href="/content-design/plain-language-equity-standard/">
               <div class="content-tile">
                 <div class="content-tile-header header-star"><span class="title-card-header-label">Standards and principles</span></div>
-                <div class="content-tile-title">Plain language equity standard</div>
+                <div class="content-tile-title">Plain Language Equity Standard</div>
                 <p>Our recommendations for how to help everyone understand content
                 </p>
               </div>
