--- a/docs/site/homepage.njk
+++ b/docs/site/homepage.njk
@@ -157,6 +157,14 @@ layout: homepage-layout
             </p>
           </div></a>
 
+          <a class="tile-link" href="/product-management/introduction-product-approach-public-sector/">
+          <div class="content-tile">
+            <div class="content-tile-header header-ribbon"><span class="title-card-header-label">Training</span></div>
+            <div class="content-tile-title">Introduction to product approach for the public sector</div>
+            <p>An online, self-paced course introducing the product approach for State of California staff
+            </p>
+          </div></a>
+
           <a class="tile-link" href="/product-management/run-of-show/">
           <div class="content-tile">
             <div class="content-tile-header header-templates"><span class="title-card-header-label">Templates</span></div>
