--- a/docs/site/homepage.njk
+++ b/docs/site/homepage.njk
@@ -161,7 +161,7 @@ layout: homepage-layout
           <div class="content-tile">
             <div class="content-tile-header header-ribbon"><span class="title-card-header-label">Training</span></div>
             <div class="content-tile-title">Introduction to product approach for the public sector</div>
-            <p>An online, self-paced course introducing the product approach for State of California staff
+            <p>An online, self-paced course introducing product principles
             </p>
           </div></a>
 
