--- a/docs/site/homepage.njk
+++ b/docs/site/homepage.njk
@@ -10,6 +10,15 @@ layout: homepage-layout
         <p>Create services that are more likely to meet people’s needs</p>
 
         <div class="content-grid-wrapper">
+          <a class="tile-link" href="/human-centered-design/measuring-customer-experience-standard/">
+            <div class="content-tile">
+              <div class="content-tile-header header-star"><span class="title-card-header-label">Standards and principles</span></div>
+              <div class="content-tile-title">Measuring Customer Experience Standard</div>
+              <p>Our recommendations for how to measure customer experience
+              </p>
+            </div></a>
+
+        <div class="content-grid-wrapper">
           <a class="tile-link" href="/human-centered-design/course/">
             <div class="content-tile">
               <div class="content-tile-header header-ribbon"><span class="title-card-header-label">Training</span></div>
