--- a/docs/site/homepage.njk
+++ b/docs/site/homepage.njk
@@ -115,11 +115,11 @@ layout: homepage-layout
             </p>
           </div></a>
 
-          <a class="tile-link" href="/data/enabling-analysis-californias-hiring-recruitment-data/">
+          <a class="tile-link" href="/data//building-housing-intelligence/">
           <div class="content-tile">
             <div class="content-tile-header header-paper"><span class="title-card-header-label">Papers</span></div>
-            <div class="content-tile-title">Enabling analysis of California’s hiring and recruitment data</div>
-            <p>How ODI and CalHR increased analysis capabilities for the Examination & Certification Online System
+            <div class="content-tile-title">Building housing intelligence for California</div>
+            <p>How ODI built a tool to more accurately track the housing development pipeline to build more housing faster
             </p>
           </div></a>
 
