--- a/docs/site/homepage.njk
+++ b/docs/site/homepage.njk
@@ -123,7 +123,7 @@ layout: homepage-layout
             </p>
           </div></a>
 
-          <a class="tile-link" href="/data/data-driven-approach-detecting-cash-benefit-theft.md">
+          <a class="tile-link" href="/data/data-driven-approach-detecting-cash-benefit-theft/">
           <div class="content-tile">
             <div class="content-tile-header header-paper"><span class="title-card-header-label">Papers</span></div>
             <div class="content-tile-title">A data-driven approach to detecting cash benefit theft</div>
