Rewrote homepage content. Mobile still needs work.

--- a/docs/site/_includes/layouts/homepage-layout.njk
+++ b/docs/site/_includes/layouts/homepage-layout.njk
@@ -23,14 +23,9 @@
           <h1 class="page-title">Tips and tools for improving service delivery</h1>
 
           <div class="cagov-hero-body-content">
-              <p class="text-lead">Find resources from the Office of Data and Innovation (ODI) to help you deliver great services. You’ll find high-level principles, detailed guides, and training. We add and update resources as we partner with state departments.
-              </p>
-              <p class="text-lead">If you want a place to start, we have recommendations for how to use each type of resource.
+              <p class="text-lead">Principles, guides, and training to help California state staff work better.
               </p>
           </div>
-        </div>
-        <div class="wp-block-button">
-          <a class="btn-primary featured-btn" href="/how-to-use/">Learn how to use the Hub</a>
         </div>
       </div>
     </article>
