--- a/docs/site/_includes/featured-content.njk
+++ b/docs/site/_includes/featured-content.njk
@@ -1,7 +1,6 @@
 <a id="plain-language-equity-toolkit"></a>
         <h2>Featured resources</h2>
         <div class="cagov-hero-body-content">
-          <p>Promote equity by helping everyone understand information</p>
           <div class="content-grid-wrapper">
 
             <a class="tile-link" href="/content-design/customer-experience/customer-experience-principles/">
@@ -25,7 +24,7 @@
             <a class="tile-link" href="/data/standard/">
               <div class="content-tile">
                 <div class="content-tile-header header-star"><span class="title-card-header-label">Standards and principles</span></div>
-                <div class="content-tile-title">California data standard</div>
+                <div class="content-tile-title">California Data Standard</div>
                 <p>How California consistently collects, analyzes, and reports data on race and ethnicity
                 </p>
               </div>
