--- a/docs/site/_includes/layouts/index.njk
+++ b/docs/site/_includes/layouts/index.njk
@@ -70,7 +70,7 @@
   {% endblock %}
 </head>
 
-<body>
+<body class="{{ metadata.page_class }}">
   <div id="skip-to-content"><a href="#body-content">Skip to content</a></div>
 
   <header class="header-container">
