--- a/docs/site/_includes/site-footer.njk
+++ b/docs/site/_includes/site-footer.njk
@@ -9,7 +9,9 @@
 </script>
 
 {% if page.url !== "/error.html" %}
+  <div class="page-feedback-container">
   <cagov-page-feedback class="cagov-mb-2 d-block"></cagov-page-feedback>
+  </div>
 {% endif %}
 
 <section aria-label="Site footer" class="site-footer">
