--- a/docs/site/homepage.njk
+++ b/docs/site/homepage.njk
@@ -3,14 +3,15 @@ permalink: /
 title: ODI Innovation Hub
 description: Find resources from the Office of Data and Innovation to help you deliver great services.
 layout: homepage-layout
+page_class: home-page
 ---
       {# <div class="m-y-4"><img class="cagov-featured-image vector-bear" src="/img/hero-bear-nature.svg" alt="California bear with abstract shapes" width="1024" height="683"></div> #}
       <div class="topic-listing-grid">
-        <div class="topic-item">
+        {# <div class="topic-item">
           <h2 class="no-top-margin">Customer experience</h2>
           <p>Understand the experiences of all Californians to make better products and services</p>
           <a class="btn-primary" href="/customer-experience/">Customer experience resources</a>
-        </div>
+        </div> #}
 
         <div class="topic-item">
           <h2>Human-centered design</h2>
