--- a/docs/site/_includes/featured-content.njk
+++ b/docs/site/_includes/featured-content.njk
@@ -3,14 +3,14 @@
         <div class="cagov-hero-body-content">
           <div class="content-grid-wrapper">
 
-            <a class="tile-link" href="/customer-experience/customer-experience-principles/">
+            {# <a class="tile-link" href="/customer-experience/customer-experience-principles/">
               <div class="content-tile">
                 <div class="content-tile-header header-star"><span class="title-card-header-label">Standards and principles</span></div>
                 <div class="content-tile-title">Customer experience principles</div>
                 <p>Tagline for the customer experience principles
                 </p>
               </div>
-            </a>
+            </a> #}
 
             <a class="tile-link" href="/content-design/plain-language-equity-standard/">
               <div class="content-tile">
@@ -20,6 +20,16 @@
                 </p>
               </div>
             </a>
+
+            <a class="tile-link" href="/product-management/introduction-product-approach-public-sector/">
+              <div class="content-tile">
+                <div class="content-tile-header header-ribbon"><span class="title-card-header-label">Training</span></div>
+                <div class="content-tile-title">Introduction to product approach for the public sector</div>
+                <p>An online, self-paced course introducing product principles
+                </p>
+              </div>
+            </a>
+
 
             <a class="tile-link" href="/data/standard/">
               <div class="content-tile">
