Removed customer experience from pulldown.  Restyling.

--- a/docs/site/_includes/site-navigation.njk
+++ b/docs/site/_includes/site-navigation.njk
@@ -45,7 +45,7 @@
               </button>
             </strong>
             <div class="expanded-menu-dropdown" id="menu1-links">
-              <a class="expanded-menu-dropdown-link js-event-hm-menu" href="/customer-experience/" tabindex="-1">Customer experience</a>
+              {# <a class="expanded-menu-dropdown-link js-event-hm-menu" href="/customer-experience/" tabindex="-1">Customer experience</a> #}
               <a class="expanded-menu-dropdown-link js-event-hm-menu" href="/human-centered-design/" tabindex="-1">Human-centered design</a> 
               <a class="expanded-menu-dropdown-link js-event-hm-menu" href="/content-design/" tabindex="-1">Content design</a> 
               <a class="expanded-menu-dropdown-link js-event-hm-menu" href="/data/" tabindex="-1">Data</a>
