--- a/docs/src/css/sass/ds-site-global.scss
+++ b/docs/src/css/sass/ds-site-global.scss
@@ -65,6 +65,7 @@ div.topic-listing-grid {
 div.topic-item {
   margin: 0rem 1rem;
   padding: 2rem 0;  /* Simplified */
+  padding-bottom: 3rem;
   border-bottom: 1px solid #C7D6E4;
 }
 
@@ -589,6 +590,7 @@ div.par-scores-container {
 }
 div.homepage-content-container {
   background-color: #ECF1F6;
+  padding-bottom: 1.5rem;
 }
 body.home-page article#post-homepage {
   margin-bottom: 0;
@@ -596,7 +598,7 @@ body.home-page article#post-homepage {
 }
 
 body.home-page div.page-feedback-container {
-  background-color: #ECF1F6;
+  // background-color: #ECF1F6;
   display: flow-root;
 }
 
@@ -611,9 +613,17 @@ body.home-page div.post-featured-page-container {
   margin-right: auto;
 }
 
+div.homepage-top-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .site-footer {
   background-color: inherit !important;
 }
+
 
 cagov-page-feedback {
 
