Increased padding on topic-listing-grid.

--- a/docs/src/css/sass/ds-site-global.scss
+++ b/docs/src/css/sass/ds-site-global.scss
@@ -64,7 +64,7 @@ div.topic-listing-grid {
 
 div.topic-item {
   margin: 0rem 1rem;
-  padding: 2rem 0;  /* Simplified */
+  padding: 2rem 2rem;  /* Simplified */
   padding-bottom: 3rem;
   border-bottom: 1px solid #C7D6E4;
 }
