--- a/docs/site/_includes/featured-content.njk
+++ b/docs/site/_includes/featured-content.njk
@@ -33,9 +33,9 @@
 
             <a class="tile-link" href="/data/standard/">
               <div class="content-tile">
-                <div class="content-tile-header header-star"><span class="title-card-header-label">Standards and principles</span></div>
-                <div class="content-tile-title">California Data Standard</div>
-                <p>How California consistently collects, analyzes, and reports data on race and ethnicity
+                <div class="content-tile-header header-book"><span class="title-card-header-label">Guides and playbooks</span></div>
+                <div class="content-tile-title">Data minimization and privacy toolkit</div>
+                <p>Collect, store, and share data safely responsibly
                 </p>
               </div>
             </a>
