--- a/docs/site/_includes/featured-content.njk
+++ b/docs/site/_includes/featured-content.njk
@@ -31,7 +31,7 @@
             </a>
 
 
-            <a class="tile-link" href="/data/standard/">
+            <a class="tile-link" href="/data/minimization-toolkit/">
               <div class="content-tile">
                 <div class="content-tile-header header-book"><span class="title-card-header-label">Guides and playbooks</span></div>
                 <div class="content-tile-title">Data minimization and privacy toolkit</div>
